--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,17 @@ dependencies = [
     # PydanticAI Framework
     "pydantic-ai>=0.1.0",
 
+    # LlamaIndex Framework
+    "llama-index-protocols-ag-ui>=0.2.0",
+    "llama-index-core>=0.10.0",
+    "llama-index-llms-openai>=0.1.0",
+
+    # AG2 (AutoGen) Framework
+    "ag2[openai]>=0.6.0",
+
+    # Google ADK Framework
+    "google-adk>=1.0.0",
+
     # Raw LLM APIs
     "openai>=1.0.0",
     "google-generativeai>=0.8.0",
