--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     # LangGraph Framework
     "langgraph>=0.2.0",
     "langchain-anthropic>=0.3.0",
+    "langchain-openai>=0.3.0",
+    "langchain-google-genai>=2.0.0",
     "langchain-core>=0.2.0",
     "ag-ui-langgraph>=0.0.20",
 
@@ -31,6 +33,8 @@ dependencies = [
     "llama-index-protocols-ag-ui>=0.2.0",
     "llama-index-core>=0.10.0",
     "llama-index-llms-openai>=0.1.0",
+    "llama-index-llms-anthropic>=0.6.0",
+    "llama-index-llms-gemini>=0.4.0",
 
     # AG2 (AutoGen) Framework
     "ag2[openai]>=0.6.0",
