--- a/ts-agents/package.json
+++ b/ts-agents/package.json
@@ -14,6 +14,7 @@
     "@ag-ui/mastra": "^0.2.0",
     "@ai-sdk/anthropic": "^1.0.0",
     "@ai-sdk/openai": "^1.0.0",
+    "@ai-sdk/google": "^1.0.0",
     "@mastra/core": "^1.0.0",
     "ai": "^4.0.0",
     "dotenv": "^16.0.0",
